<resources>
    <string name="app_name">AquariumTracker</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit">Edit</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menu_aquarium">Aquariums</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Previous</string>

    <string name="aquarium_view_overview">Overview</string>
    <string name="aquarium_view_livestock">Livestock</string>
    <string name="aquarium_view_plant">Plants</string>
    <string name="aquarium_view_params">Parameters</string>
    <string name="aquarium_view_reminder">Reminders</string>

    <string name="measure_nitrite">Nitrite</string>
    <string name="measure_nitrate">Nitrate</string>
    <string name="measure_pH">pH</string>
    <string name="measure_GH">Total Hardness (GH)</string>
    <string name="measure_chlorine">Chlorine</string>
    <string name="measure_kh">Total Alkalinity (KH)</string>

    <string name="units_mg_p_L">(mg / L)</string>

    <string name="delete_message">You are about to delete this aquarium and all associated data. Are you sure?</string>
    <string name="delete_button_message">"Press %d times to delete."</string>
    <string name="repeat_starting">Starting:</string>
    <string name="repeat_every">Repeat every:</string>
    <string name="repeat_days">days.</string>
    <string name="option_repeatable">Repeatable</string>
    <string name="reminder_name">Reminder Name:</string>
    <string name="notification">Notification</string>
    <string name="rem_input_error">Please double check inputs. Reminder was not saved.</string>

    <string name="latest_pictures">Latest Pictures</string>
    <string name="latest_parameter">Latest Parameters</string>
    <string name="latest_reminders">Latest Reminders</string>
    <string name="aquarium_size">Aquarium Size:</string>
    <string name="start_date">Start Date:</string>
    <string name="set">Set</string>
    <string name="aquarium_photo_content_description">Aquarium Photo</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="notes">Notes:</string>
    <string name="import_images_from_gallery">Import images from gallery</string>
    <string name="next_reminder">Next Reminder</string>


    <string-array name="time_choices">
        <item>Days</item>
        <item>Weeks</item>
    </string-array>


</resources>