<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="@dimen/padding" />

        <EditText
            android:id="@+id/rem_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:autofillHints=""
            android:hint="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="@dimen/padding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <Button
                android:id="@+id/date_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/set"/>
        </LinearLayout>


        <Switch
            android:id="@+id/repeat_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_repeatable"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="@dimen/padding" />

        <LinearLayout
            android:id="@+id/repeat_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/repeat_every"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <EditText
                    android:id="@+id/repeat_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:text=""
                    android:autofillHints=""
                    android:hint="" />

                <Spinner
                    android:id="@+id/repeat_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/time_choices"
                    android:text="@string/repeat_days"
                    android:textAlignment="viewEnd"
                    android:gravity="end" />

            </LinearLayout>

        </LinearLayout>


        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_margin="@dimen/padding" />

        <LinearLayout
            android:id="@+id/notification_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notification_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <Button
                    android:id="@+id/time_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/set" />
            </LinearLayout>

        </LinearLayout>

        <!--        <TextView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/notes"/>-->
        <!--        <EditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text=""-->
        <!--            android:inputType="textPersonName" />-->


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>