<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_reminder"
            android:textAppearance="@style/TextAppearance.Shrine.Toolbar" />

        <fragment
            android:id="@+id/fragment3"
            android:name="com.example.aquariumtracker.ui.NextReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_pictures"
            android:textAppearance="@style/TextAppearance.Shrine.Toolbar" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment2"
            android:name="com.example.aquariumtracker.ui.GallerySmallDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_parameter"
            android:textAppearance="@style/TextAppearance.Shrine.Toolbar" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment"
            android:name="com.example.aquariumtracker.ui.ParameterList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>







